Fixed an issue where confirmation pop-up is hidden behind Reassign/Drop Owned Dialog. Fixes #7071

--- a/web/pgadmin/static/scss/_webcabin.pgadmin.scss
+++ b/web/pgadmin/static/scss/_webcabin.pgadmin.scss
@@ -261,7 +261,7 @@
 
 .wcMenuList, .context-menu-list {
   border: 1px solid $dropdown-border-color;
-  z-index: 9999 !important;
+  z-index: 1999 !important;
   background-color: $dropdown-bg;
   box-shadow: $dropdown-box-shadow;
   border-radius: $dropdown-border-radius;
